# UMT

./: .gitignore  .npmignore  .npmrc  AGENTS.md  BUG_REPORT.md  README.md  flake.nix  index.html  modules.html  package-lock.json  package.json  repro_lazy_take.ts  test.js  tsconfig.json  typedoc.json
package/umt_pyo3/: Cargo.toml  main.py  pyproject.toml
package/umt_pyo3/src/: lib.rs
package/umt_python/: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  benchmark.py  pyproject.toml
package/umt_python/src/: __init__.py  delete_spaces.py  format_string.py  from_base64.py  pad_end.py  pad_start.py  random_string.py  random_string_initialization.py  reverse_string.py  to_base64.py  to_half_width.py  trim_characters.py
package/umt_python/src/advance/: __init__.py  range_advance.py
package/umt_python/src/array/: __init__.py  apply_insertion_sort_if_needed.py  array_sum.py  arrays_join.py  binary_search.py  check_flag_alignment.py  chunk.py  compact.py  compare_function_default.py  drop.py  dual_pivot_quick_sort.py  first.py  generate_number_array.py  get_arrays_common.py  get_arrays_diff.py  group_by.py  insertion_sort.py  insertion_sort_range.py  key_by.py  merge_sort.py  pop.py  quick_sort.py  random_select.py  range_array.py  shuffle.py  shuffle_2d_array.py  tim_sort.py  ultra_number_sort.py  uniq_by.py  unique.py  validate_range.py  zip_arrays.py  zip_longest.py
package/umt_python/src/color/: __init__.py  cmyk_to_rgba.py  hexa_to_rgba.py  hsla_to_rgba.py  rgba_to_cmyk.py  rgba_to_hexa.py  rgba_to_hsla.py
package/umt_python/src/consts/: __init__.py  clock_consts.py  http_status.py
package/umt_python/src/crypto/: __init__.py  decode_base32.py  decode_base32_to_string.py  decode_base58.py  decode_base58_to_string.py  encode_base32.py  encode_base58.py
package/umt_python/src/data_structure/: __init__.py  lru_cache.py  priority_queue.py  ttl_cache.py
package/umt_python/src/date/: __init__.py  birthday.py  date_format.py  date_new.py  date_now.py  date_range.py  day_of_week.py  get_day.py  get_timezone_offset_string.py  is_leap_year.py
package/umt_python/src/error/: __init__.py  flat_map_result.py  map_result.py  match_result.py  retry.py  safe_execute.py
package/umt_python/src/function/: __init__.py  curry.py  debounce.py  memoize.py  once.py  throttle.py
package/umt_python/src/ip/: __init__.py  cidr_to_long.py  cidr_to_subnet_mask.py  get_ip_class.py  get_network_address.py  ip_to_binary_string.py  ip_to_long.py  is_in_range.py  is_private_ip.py  long_to_ip.py  subnet_mask_to_cidr.py
package/umt_python/src/iterator/: __init__.py  lazy_filter.py  lazy_map.py  lazy_take.py
package/umt_python/src/math/: __init__.py  addition.py  average.py  bitwise.py  clamp.py  correlation_coefficient.py  deg_to_rad.py  deviation_value.py  division.py  factorial.py  factorize.py  flexible_number_conversion.py  gcd.py  get_decimal_length.py  in_range.py  is_double.py  is_perfect_square.py  is_prime_number.py  lcm.py  linear_congruential_generator.py  math_converter.py  math_separator.py  max_value.py  median.py  min_value.py  mode.py  multiples.py  multiplication.py  n_cr.py  n_hr.py  n_pr.py  percentile.py  prime_factorization.py  quotient.py  rad_to_deg.py  random_int.py  reduce_fraction.py  repeated_trial.py  round_of.py  solve_equation.py  (+9 more)
package/umt_python/src/number/: __init__.py  format_number.py  to_ordinal.py  to_percentage.py
package/umt_python/src/object/: __init__.py  deep_clone.py  get_objects_common.py  get_objects_diff.py  object_get.py  object_has.py  object_is_empty.py  object_is_plain.py  object_key_by.py  object_map_keys.py  object_map_values.py  object_merge.py  object_merge_deep.py  object_omit.py  object_pick.py  object_pick_deep.py
package/umt_python/src/predicate/: __init__.py  every.py  is_not_nullish.py  is_nullish.py  matches.py  not_.py  some.py
package/umt_python/src/string/: __init__.py  camel_case.py  delete_spaces.py  escape_html.py  format_string.py  fuzzy_search.py  has_no_letters.py  kebab_case.py  levenshtein_distance.py  random_string.py  random_string_initialization.py  slugify.py  string_similarity.py  to_base64.py  to_half_width.py  trim_characters.py  trim_end_characters.py  trim_start_characters.py  truncate.py  unescape_html.py
package/umt_python/src/time/: __init__.py  convert_time.py  normalize_time_unit.py
package/umt_python/src/tool/: __init__.py  create_pipeline.py  escape_regexp.py  parse_json.py  pipe.py  unwrap.py
package/umt_python/src/ua/: __init__.py  extract_browser_from_user_agent.py  extract_device_from_user_agent.py  extract_os_from_user_agent.py  parse_user_agent.py
package/umt_python/src/unit/: __init__.py  to_celsius.py  to_kelvin.py  unit_converter_initialization.py
package/umt_python/src/url/: __init__.py  build_url.py  is_absolute_url.py  join_path.py  parse_query_string.py
package/umt_python/src/validate/: __init__.py  is_array.py  is_deep_equal.py  is_dictionary_object.py  is_double.py  is_equal.py  is_not_empty.py  is_number.py  is_perfect_square.py  is_prime_number.py  is_string.py  is_value_nan.py  parse_email.py
package/umt_python/tests/: __init__.py  test_array.py  test_color.py  test_crypto.py  test_date.py  test_ip.py  test_math.py  test_object.py  test_string.py  test_string_utils.py  test_ua.py  test_validate.py
package/umt_python/tests/benchmark/: benchmark_average.py  benchmark_levenshtein.py  benchmark_n_pr.py  benchmark_subtraction.py  benchmark_ultra_number_sort.py
package/umt_rust/: CLAUDE.md  Cargo.toml  rustfmt.toml
package/umt_rust/benches/: benchmark.rs
package/umt_rust/doc/: index.md
package/umt_rust/src/: lib.rs
package/umt_rust/src/advance/: mod.rs  range_advance.rs
package/umt_rust/src/array/: arrays_join.rs  binary_search.rs  check_flag_alignment.rs  chunk.rs  compact.rs  compare_function_default.rs  drop.rs  dual_pivot_quick_sort.rs  first.rs  generate_number_array.rs  get_arrays_common.rs  get_arrays_diff.rs  mod.rs  (+16 more)
package/umt_rust/tests/: integration_tests.rs  math_calculator_tests.rs  object_tests.rs  tests.rs  tool_tests.rs  validate_tests.rs
(+2426 files in other folders)
