[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[tool.setuptools]
package-dir = { "umt_python" = "src" }
packages = ["umt_python"]

[project]
authors = [{ name = "riya-amemiya", email = "riyaamemiya@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
description = "A collection of useful utility functions for various tasks in Python, focusing on string manipulation and formatting."
license = "MIT"
name = "umt_python"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.1"

[project.urls]
"Bug Tracker" = "https://github.com/riya-amemiya/UMT/issues"
"Homepage" = "https://github.com/riya-amemiya/UMT"
"Repository" = "https://github.com/riya-amemiya/UMT"

[dependency-groups]
dev = [
  "pyright==1.1.408",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "ruff==0.14.14",
]

[tool.ruff.lint]
select = [
  "ANN",
  "ARG",
  "A",
  "C4",
  "DTZ",
  "E",
  "W",
  "F",
  "FIX",
  "UP",
  "B",
  "SIM",
  "I",
  "RET",
  "PT",
  "N",
  "PERF",
  "PL",
  "FURB",
  "RUF",
]
ignore = ["E501", "FBT003", "A005", "PLR2004", "PLR0911","PLR0912","PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ALL"]
"src/string/to_half_width.py" = ["RUF"]
