[package]
authors = ["riya-amemiya"]
description = "UMT is a collection of useful functions that I personally created."
edition = "2024"
exclude = [".github", ".gitignore", "tests"]
license = "MIT"
name = "umt_rust"
repository = "https://github.com/riya-amemiya/UMT"
version = "0.2.1"

[lib]
crate-type = ["lib"]
name = "umt_rust"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.8.0"
rand = "0.9.2"

[[bench]]
harness = false
name = "benchmark"
