[package]
authors = ["riya-amemiya"]
description = "UMT is a collection of useful functions that I personally created."
edition = "2024"
exclude = [".github", ".gitignore", "tests"]
license = "MIT"
name = "umt_rust"
repository = "https://github.com/riya-amemiya/UMT"
version = "0.2.1"

[lib]
crate-type = ["lib"]
name = "umt_rust"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.8.1"
rand = "0.9.2"

