[package]
authors = ["riya-amemiya"]
description = "UMT is a collection of useful functions that I personally created."
edition = "2024"
exclude = [".github", ".gitignore", "tests"]
license = "MIT"
name = "umt_rust"
repository = "https://github.com/riya-amemiya/UMT"
version = "0.2.1"

[lib]
crate-type = ["lib"]
name = "umt_rust"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.43"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
unicode-normalization = "0.1.25"

[dev-dependencies]
criterion = "0.8.1"
rand = "0.9.2"
